wrote more documentation for jispr

--- a/documentation/source/_static/css/custom03.css
+++ b/documentation/source/_static/css/custom03.css
@@ -7,6 +7,7 @@ html[data-theme="light"] {
   --pst-color-inline-code: var(--pst-color-text-base);
   --pst-heading-color: var(--pst-color-primary);
   --pst-color-link: #085d6c;
+  --pst-color-table-row-hover-bg: #a2b6c1;
 }
 
 a {
