rn button to reflect it is used for different purposes

--- a/documentation/source/_static/css/custom05.css
+++ b/documentation/source/_static/css/custom05.css
@@ -45,7 +45,7 @@ nav.bd-links li>a:hover {
 }
 
 
-.thebelab-button {
+.sidebar-button {
     transition: background-color 0.3s ease;
     background: var(--pst-color-secondary);
     color: #fff;
@@ -61,11 +61,11 @@ nav.bd-links li>a:hover {
     height: auto;
 }
 
-.thebelab-button:visited {
+.sidebar-button:visited {
     color: #fff !important;
 }
 
-.thebelab-button:hover {
+.sidebar-button:hover {
     background-color: var(--pst-color-secondary);
 }
 
@@ -113,7 +113,7 @@ nav.bd-links li>a:hover {
 }
 
 /* run button */ 
-button.thebelab-button.thebelab-run-button::before {
+button.sidebar-button.thebelab-run-button::before {
   font-family: 'Font Awesome 5 Free'; /* Ensure Font Awesome is loaded */
   content: '▶'; /* Unicode for the "play" icon */
   margin-right: 5px; /* Add spacing between the icon and text */
@@ -133,7 +133,7 @@ button.thebelab-button.thebelab-run-button::before {
   font-size: 0.875em !important;
 }
 
-.thebe-launch-button {
+.sidebar-launch-button {
   height: 5em;
   font-size: 0.8em;
   border: 0px black solid;
