changed the custom.css files name (to prevent loading it from the browser cache) and changed the hovering font of the jupyter download button to white

--- a/documentation/source/_static/css/custom06.css
+++ b/documentation/source/_static/css/custom06.css
@@ -67,6 +67,7 @@ nav.bd-links li>a:hover {
 
 .sidebar-button:hover {
     background-color: var(--pst-color-secondary);
+	color: #ffffff;
 }
 
 .thebelab-cell {
