fixed a style issue with the jupyter cell numberings

--- a/documentation/source/_static/css/custom06.css
+++ b/documentation/source/_static/css/custom06.css
@@ -95,6 +95,11 @@ div.nbinput.container div.prompt
     display:  none;
 }
 
+div.nboutput.container div.prompt
+{
+    display:  none;
+}
+
 .sidebar-button:hover {
     background-color: var(--pst-color-secondary);
 	color: #ffffff;
